# OpenVAN

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  backlog.md  package-lock.json  package.json
core/: README.md  pyproject.toml
core/openvan_core/: __init__.py  __main__.py  aesctr.py  api.py  apiclient.py  backends.py  ble.py  camp.py  campsources.py  companion.py  config.py  conversation.py  coverage.py  drivers.py  entities.py  events.py  habridge.py  hub.py  integrations.py  intents.py  llm.py  maintenance.py  mcp_server.py  memory.py  notices.py  personalities.py  plugins.py  predictions.py  roads.py  routines.py  runtime.py  safety.py  scenes.py  security.py  signing.py  simulation.py  store.py  telemetry.py  trip.py  twin.py  (+3 more)
core/openvan_core/transports/: __init__.py  links.py  modbus_rtu.py  modbus_tcp.py  (+1 more)
core/tests/: conftest.py  test_aesctr.py  test_air_safety.py  test_api.py  test_apiclient.py  test_ble.py  test_ble_drivers.py  test_ble_gatt_drivers.py  test_cameras.py  test_camp.py  test_chat.py  test_chinese_heater.py  test_companion.py  test_connectivity.py  test_conversation.py  test_core.py  test_coverage.py  test_device_controls.py  test_device_sensors.py  test_diesel_heater.py  test_drivers.py  test_energy.py  test_esphome.py  test_fridge.py  test_habridge.py  test_integrations.py  test_leveling.py  test_links_rtu.py  test_llm.py  test_maintenance.py  test_memory.py  test_notices.py  test_personalities.py  test_predictions.py  test_propane.py  test_roads.py  test_routines.py  test_routing_limits.py  test_scenes.py  test_security.py  (+20 more)
(+182 files in other folders)
