[project]
name = "openvan-core"
version = "0.1.0"
description = "OpenVan Core — offline-first, AI-first operating system for camper vans"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
mcp = [
    "mcp>=1.2",
]
# ESPHome native-API transport. Optional: without it the ESPHome integration runs
# in sim; install to talk to a real node (`pip install -e ".[esphome]"`).
esphome = [
    "aioesphomeapi>=24",
]

[project.scripts]
openvan-core = "openvan_core.__main__:main"
openvan-mcp = "openvan_core.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openvan_core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
